feat: add multi-tenant company isolation and role-aware frontend